* numeric.c (int_pow, fix_mul): Avoid optimization bugs of   clang.  Submitted by Wataru Kimura [Bug #6796].

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_8@36546 b2dd03c8-39d4-4d8f-98ff-823fe69b080e